<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:oops="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.sixosix.gesmana.FloatingItem
            android:id="@+id/pattern_me"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            oops:leftText="@string/define_pattern"
            oops:rightText="【未设置】" />

        <com.sixosix.gesmana.FloatingItem
            android:id="@+id/pattern_visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            oops:leftText="@string/pattern_visible"
            oops:rightStyle="iconSwitch"
            oops:rightText="@string/pattern_visible_hint" />

        <com.sixosix.gesmana.FloatingItem
            android:id="@+id/pattern_clear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            oops:leftText="@string/clear_pattern"
            oops:rightStyle="iconHide" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
