<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:oops="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.sixosix.gesmana.FloatingItem
            android:id="@+id/icon_set"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            oops:leftText="图标"
            oops:rightText="设置图标" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg"
            android:clickable="true"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tv_size"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="@string/size"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/sb_size"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:max="200"
                android:progress="100" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/bg"
            android:clickable="true"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tv_alpha"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="@string/alpha"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/sb_alpha"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:max="200"
                android:progress="100" />
        </RelativeLayout>

        <com.sixosix.gesmana.FloatingItem
            android:id="@+id/move"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            oops:leftText="@string/move"
            oops:rightStyle="iconCheck"
            oops:rightText="【长按提示】"
            oops:rightTextColor="@color/info"
            oops:rightTextSize="12" />

        <com.sixosix.gesmana.FloatingItem
            android:id="@+id/stick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            oops:leftText="@string/canStick"
            oops:rightStyle="iconCheck"
            oops:rightText="【长按提示】"
            oops:rightTextColor="@color/info"
            oops:rightTextSize="12" />

        <com.sixosix.gesmana.FloatingItem
            android:id="@+id/blur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            oops:leftText="@string/canBlur"
            oops:rightStyle="iconCheck"
            oops:rightText="【长按提示】"
            oops:rightTextColor="@color/info"
            oops:rightTextSize="12" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>