<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/pj_user_center"
            android:icon="@drawable/user_center"
            android:title="@string/personal_center"/>
        <item
            android:id="@+id/pj_share"
            android:icon="@drawable/share"
            android:title="@string/share"/>
        <item
            android:id="@+id/pj_setting"
            android:icon="@drawable/setting"
            android:title="@string/set">
        </item>
    </group>


    <!--<menu>-->
        <!--<group android:checkableBehavior="single">-->
            <!--<item-->
                <!--android:icon="@drawable/ic_menu_gallery"-->
                <!--android:title="@string/self_start"-->
                <!--/>-->
            <!--<item-->
                <!--android:icon="@drawable/ic_menu_gallery"-->
                <!--android:title="@string/gesture_use_history">-->
            <!--</item>-->
            <!--<item-->
                <!--android:icon="@drawable/ic_menu_gallery"-->
                <!--android:title="@string/backups">-->
                <!--<menu>-->
                    <!--<group android:checkableBehavior="single">-->
                        <!--<item-->
                            <!--android:icon="@drawable/ic_menu_gallery"-->
                            <!--android:title="@string/backups_data"/>-->

                        <!--<item-->
                            <!--android:icon="@drawable/ic_menu_gallery"-->
                            <!--android:title="@string/recovery_data"/>-->
                        <!--<item-->
                            <!--android:icon="@drawable/ic_menu_gallery"-->
                            <!--android:title="@string/syn_data"/>-->
                    <!--</group>-->
                <!--</menu>-->
            <!--</item>-->
            <!--<item-->
                <!--android:icon="@drawable/ic_menu_gallery"-->
                <!--android:title="@string/about_us">-->
                <!--<menu>-->
                    <!--<group android:checkableBehavior="single">-->
                        <!--<item-->
                            <!--android:icon="@drawable/ic_menu_gallery"-->
                            <!--android:title="@string/check_update">-->
                        <!--</item>-->
                        <!--<item-->
                            <!--android:icon="@drawable/ic_menu_gallery"-->
                            <!--android:title="@string/call_us">-->
                        <!--</item>-->
                    <!--</group>-->
                <!--</menu>-->
            <!--</item>-->
        <!--</group>-->
    <!--</menu>-->

    <!--<item android:title="Communicate">-->
    <!--<menu>-->
    <!--<item-->
    <!--android:id="@+id/nav_share"-->
    <!--android:icon="@drawable/ic_menu_share"-->
    <!--android:title="Share"/>-->
    <!--<item-->
    <!--android:id="@+id/nav_send"-->
    <!--android:icon="@drawable/ic_menu_send"-->
    <!--android:title="Send"/>-->
    <!--</menu>-->
    <!--</item>-->

</menu>

