<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
    >
    <include layout="@layout/nav_header_main"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
            android:id="@+id/header1"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/syn"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="30dp"
                    android:text="@string/syn_data"
                    android:textColor="#333333"
                    android:textSize="16sp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="140dp">
                <com.suke.widget.SwitchButton
                    android:id="@+id/switch_button"
                    android:layout_width="48dp"
                    android:layout_height="24dp"
                    /></LinearLayout>

        </LinearLayout>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <ImageView
            android:id="@+id/header2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/backups"
            android:paddingStart="1dp"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="27dp"
                    android:textColor="#333333"
                    android:textSize="16sp"
                    android:text="@string/backups_data"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <ImageView
            android:id="@+id/header3"
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:src="@drawable/recovery"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="30dp"
                    android:textColor="#333333"
                    android:textSize="16sp"
                    android:text="@string/recovery_data"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>